--- a/atom.html
+++ b/atom.html
@@ -158,7 +158,7 @@
                     </div>
                     <div class="card-body">
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/atom/原子物理学笔记.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="原子物理学笔记.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>QZQ笔记</span>
                             </a>
