--- a/atom.html
+++ b/atom.html
@@ -165,14 +165,14 @@
                             <small class="text-muted d-block mt-1">原子物理学习笔记</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/atom/原子物理学 by 杨福家 (z-lib.org).pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="原子物理学 by 杨福家 (z-lib.org).pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>原子物理学</span>
                             </a>
                             <small class="text-muted d-block mt-1">杨福家</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/atom/原子物理学.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="原子物理学.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>蒋泊远笔记</span>
                             </a>
