--- a/cosmos.html
+++ b/cosmos.html
@@ -154,28 +154,28 @@
                     </div>
                     <div class="card-body">
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/cosmos/宇宙学的物理基础.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="宇宙学的物理基础.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>蒋泊远笔记</span>
                             </a>
                             <small class="text-muted d-block mt-1">宇宙学的物理基础</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/cosmos/【北京大学物理学丛书】热大爆炸宇宙学【俞允强】.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="【北京大学物理学丛书】热大爆炸宇宙学【俞允强】.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>北京大学热大爆炸宇宙学</span>
                             </a>
                             <small class="text-muted d-block mt-1">经典宇宙学教材</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/cosmos/弯曲时空量子场论与量子宇宙学.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="弯曲时空量子场论与量子宇宙学.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>弯曲时空量子场论与量子宇宙学</span>
                             </a>
                             <small class="text-muted d-block mt-1">经典宇宙学教材</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/cosmos/宇宙学基本原理_13447868.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="宇宙学基本原理_13447868.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>宇宙学基本原理</span>
                             </a>
