--- a/electrodynamics.html
+++ b/electrodynamics.html
@@ -162,21 +162,21 @@
                             <small class="text-muted d-block mt-1">经典电动力学教材</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/electro/电动力学复习.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="电动力学复习.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>蒋泊远笔记</span>
                             </a>
                             <small class="text-muted d-block mt-1">精选习题与解答</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/electro/【北京大学物理学丛书】电动力学简明教程【俞允强】.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="【北京大学物理学丛书】电动力学简明教程【俞允强】.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>北京大学电动力学简明教程</span>
                             </a>
                             <small class="text-muted d-block mt-1">俞允强教授</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/electro/经典电动力学_13451420.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="经典电动力学_13451420.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>经典电动力学</span>
                             </a>
