--- a/fluid.html
+++ b/fluid.html
@@ -158,14 +158,14 @@
                     </div>
                     <div class="card-body">
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/fluid/流体力学笔记.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="流体力学笔记.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>蒋泊远笔记</span>
                             </a>
                             <small class="text-muted d-block mt-1">经典流体力学教材</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/fluid/流体力学（上册）北京大学吴望一.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="流体力学（上册）北京大学吴望一.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>流体力学</span>
                             </a>
