--- a/group.html
+++ b/group.html
@@ -158,28 +158,28 @@
                     </div>
                     <div class="card-body">
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/group/物理学中群论.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="物理学中群论.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>蒋泊远笔记</span>
                             </a>
                             <small class="text-muted d-block mt-1">经典群论教材</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/group/群论(冯克勤).pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="群论(冯克勤).pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>群论</span>
                             </a>
                             <small class="text-muted d-block mt-1">冯克勤</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/group/[现代物理基础丛书]8 物理学中的群论(马中骐).pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="[现代物理基础丛书]8 物理学中的群论(马中骐).pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>物理学中的群论</span>
                             </a>
                             <small class="text-muted d-block mt-1">马中骐</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/group/【北京大学物理学丛书】群论和量子力学中的对称性 - 朱洪元.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="【北京大学物理学丛书】群论和量子力学中的对称性 - 朱洪元.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>群论与量子力学中对称性</span>
                             </a>
