数学物理学.html

--- a/mathphysics.html
+++ b/mathphysics.html
@@ -155,35 +155,35 @@
                     </div>
                     <div class="card-body">
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/mathphysics/数学物理方法.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="数学物理方法.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>蒋泊远笔记</span>
                             </a>
                             <small class="text-muted d-block mt-1">经典数学物理教材</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/mathphysics/数学物理方法 by 顾樵 (z-lib.org).pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="数学物理方法 by 顾樵 (z-lib.org).pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>顾樵《数学物理方法》</span>
                             </a>
                             <small class="text-muted d-block mt-1">中文经典教材</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/mathphysics/[现代物理基础丛书]3 数学物理方程及其近似方法 程建春 2004.5 461s.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="[现代物理基础丛书]3 数学物理方程及其近似方法 程建春 2004.5 461s.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>数学物理方程及其近似方法</span>
                             </a>
                             <small class="text-muted d-block mt-1">程建春</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/mathphysics/数学物理方法 汪德新.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="数学物理方法 汪德新.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>数学物理方法</span>
                             </a>
                             <small class="text-muted d-block mt-1">汪德新</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/mathphysics/数学物理方法补充.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="数学物理方法补充.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>数学物理方法补充</span>
                             </a>
