--- a/optical.html
+++ b/optical.html
@@ -158,63 +158,63 @@
                     </div>
                     <div class="card-body">
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/optical/光学.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="光学.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>蒋泊远笔记</span>
                             </a>
                             <small class="text-muted d-block mt-1">光学经典教材</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/optical/OPTICS光学 第3版_14321482.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="OPTICS光学 第3版_14321482.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>光学</span>
                             </a>
                             <small class="text-muted d-block mt-1">经典教材</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/optical/光学_母国光 战元龄.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="光学_母国光 战元龄.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>光学</span>
                             </a>
                             <small class="text-muted d-block mt-1">光学_母国光</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/optical/光学原理：光的传播、干涉和衍射的电磁理论（第7版）清晰版.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="光学原理：光的传播、干涉和衍射的电磁理论（第7版）清晰版.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>光学原理</span>
                             </a>
                             <small class="text-muted d-block mt-1">光学原理：光的传播、干涉和衍射的电磁理论（第7版）清晰版</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/optical/【北京大学物理学丛书】非线性光学物理【叶佩弦】.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="【北京大学物理学丛书】非线性光学物理【叶佩弦】.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>非线性光学</span>
                             </a>
                             <small class="text-muted d-block mt-1">北京大学非线性光学经典教材</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/optical/量子光学导论.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="量子光学导论.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>量子光学导论</span>
                             </a>
                             <small class="text-muted d-block mt-1">量子光学导论</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/optical/衍射、傅里叶光学及成像.pdf by 衍射、傅里叶光学及成像.pdf (z-lib.org).pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="衍射、傅里叶光学及成像.pdf by 衍射、傅里叶光学及成像.pdf (z-lib.org).pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>衍射、傅里叶光学及成像</span>
                             </a>
                             <small class="text-muted d-block mt-1">傅里叶光学教材</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/optical/研究生教学用书-激光光学：光束描述、传输变换与光腔技术物理（第3版）-吕百达-高等教育出版社-2003.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="研究生教学用书-激光光学：光束描述、传输变换与光腔技术物理（第3版）-吕百达-高等教育出版社-2003.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>激光原理</span>
                             </a>
                             <small class="text-muted d-block mt-1">研究生教材</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/optical/新概念物理教程 光学.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="新概念物理教程 光学.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>光学</span>
                             </a>
