--- a/qft.html
+++ b/qft.html
@@ -174,77 +174,77 @@
                             <small class="text-muted d-block mt-1">物理直观，通俗易懂</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/qft/qft2005.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="qft2005.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>清华大学量子场论讲义</span>
                             </a>
                             <small class="text-muted d-block mt-1">多所高校讲义汇总</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/qft/现代量子场论导引-裘忠平-华中师范大学出版社-1992.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="现代量子场论导引-裘忠平-华中师范大学出版社-1992.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>现代量子场论导引-裘忠平-华中师范大学出版社-1992</span>
                             </a>
                             <small class="text-muted d-block mt-1">多所高校讲义汇总</small>
                         </div>
                          <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/qft/量子场论(上册)-[法]C.依捷克森＆J.B.祖柏尔-科学出版社.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="量子场论(上册)-[法]C.依捷克森＆J.B.祖柏尔-科学出版社.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>量子场论（上册） C.依捷克森＆J</span>
                             </a>
                             <small class="text-muted d-block mt-1">多所高校讲义汇总</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/qft/量子场论(下册)-[法]C.依捷克森＆J.B.祖柏尔-科学出版社-1986.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="量子场论(下册)-[法]C.依捷克森＆J.B.祖柏尔-科学出版社-1986.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>量子场论（下册） C.依捷克森＆J</span>
                             </a>
                             <small class="text-muted d-block mt-1">多所高校讲义汇总</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/qft/量子场论-第二部分：规范理论（英文）--南开大学Yi Liao的笔记.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="量子场论-第二部分：规范理论（英文）--南开大学Yi Liao的笔记.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>量子场论-第二部分：规范理论（英文）--南开大学Yi Liao的笔记</span>
                             </a>
                             <small class="text-muted d-block mt-1">多所高校讲义汇总</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/qft/量子场论简明教程-乔从丰-2008.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="量子场论简明教程-乔从丰-2008.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>量子场论简明教程-乔从丰-2008</span>
                             </a>
                             <small class="text-muted d-block mt-1">多所高校讲义汇总</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/qft/量子场论导引(上册)-杨炳麟.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="量子场论导引(上册)-杨炳麟.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>量子场论（上册）</span>
                             </a>
                             <small class="text-muted d-block mt-1">-杨炳麟</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/qft/量子场论导引(下册)-杨炳麟.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="量子场论导引(下册)-杨炳麟.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>量子场论(下册)</span>
                             </a>
                             <small class="text-muted d-block mt-1">-杨炳麟</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/qft/量子场论引论-[英]F.Mandl-程国均(编译)-四川大学出版社-1989.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="量子场论引论-[英]F.Mandl-程国均(编译)-四川大学出版社-1989.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>量子场论引论</span>
                             </a>
                             <small class="text-muted d-block mt-1">F.mandl 编译版</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/qft/量子场论纲要-殷鹏程-上海科学技术出版社-1986.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="量子场论纲要-殷鹏程-上海科学技术出版社-1986.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>量子场论纲要</span>
                             </a>
                             <small class="text-muted d-block mt-1">殷鹏程-上海科学技术出版社-1986</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/qft/Quantum Field Theory：From Operators to Path Integrals, 2ed, Revised and Enlarged（量子场论：从算子到路径积分 第2版修订增补版）, Kerson Huang(黄克孙), Wiley, 2010.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="Quantum Field Theory：From Operators to Path Integrals, 2ed, Revised and Enlarged（量子场论：从算子到路径积分 第2版修订增补版）, Kerson Huang(黄克孙), Wiley, 2010.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>从算符至路径积分</span>
                             </a>
