quantum-info.html

--- a/quantum-info.html
+++ b/quantum-info.html
@@ -167,21 +167,21 @@
                             <small class="text-muted d-block mt-1">加州理工学院课程讲义</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/quantum-info/量子信息.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="量子信息.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>量子计算笔记</span>
                             </a>
                             <small class="text-muted d-block mt-1">蒋泊远的笔记</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/quantum-info/《量子信息物理原理》张永德.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="《量子信息物理原理》张永德.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>量子信息物理原理 张永德</span>
                             </a>
                             <small class="text-muted d-block mt-1">经典教材</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/quantum-info/量子计算和量子信息（量子计算部分，Nielsen等着）(1).pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="量子计算和量子信息（量子计算部分，Nielsen等着）(1).pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>量子计算和量子信息（量子计算部分，Nielsen等着）</span>
                             </a>
