--- a/relative.html
+++ b/relative.html
@@ -155,49 +155,49 @@
                     </div>
                     <div class="card-body">
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/relative/微分几何入门与广义相对论上（梁灿彬）.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="微分几何入门与广义相对论上（梁灿彬）.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>微分几何入门与广义相对论上（梁灿彬）</span>
                             </a>
                             <small class="text-muted d-block mt-1">现代广义相对论教材</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/relative/微分几何入门与广义相对论中（梁灿彬）.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="微分几何入门与广义相对论中（梁灿彬）.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>微分几何入门与广义相对论中（梁灿彬）</span>
                             </a>
                             <small class="text-muted d-block mt-1">现代广义相对论教材</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/relative/微分几何入门与广义相对论下（梁灿彬）.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="微分几何入门与广义相对论下（梁灿彬）.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>微分几何入门与广义相对论下（梁灿彬）</span>
                             </a>
                             <small class="text-muted d-block mt-1">现代广义相对论教材</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/relative/微分几何入门及广义相对论答案.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="微分几何入门及广义相对论答案.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>微分几何入门与广义相对论答案</span>
                             </a>
                             <small class="text-muted d-block mt-1">现代广义相对论教材解答</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/relative/【北京大学物理学丛书5】广义相对论引论（俞允强.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="【北京大学物理学丛书5】广义相对论引论（俞允强.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>北京大学广义相对论</span>
                             </a>
                             <small class="text-muted d-block mt-1">快速入门广义相对论</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/relative/引力和宇宙学——广义相对论的原理和应用 by [美]S. 温伯格 Steven Weinberg (z-lib.org).pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="引力和宇宙学——广义相对论的原理和应用 by [美]S. 温伯格 Steven Weinberg (z-lib.org).pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>引力和宇宙学——广义相对论的原理和应用</span>
                             </a>
                             <small class="text-muted d-block mt-1">温波格教授巨著</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/relative/微分几何入门与广义相对论 3册合集 by 梁灿彬 周彬 (z-lib.org).pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="微分几何入门与广义相对论 3册合集 by 梁灿彬 周彬 (z-lib.org).pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>微分几何入门与广义相对论（梁灿彬）</span>
                             </a>
