--- a/sound.html
+++ b/sound.html
@@ -158,35 +158,35 @@
                     </div>
                     <div class="card-body">
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/sound/声学基础笔记.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href=".声学基础笔记.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>蒋泊远笔记</span>
                             </a>
                             <small class="text-muted d-block mt-1">经典声学教材</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/sound/现代声学理论基础_.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="现代声学理论基础_.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>现代声学理论基础</span>
                             </a>
                             <small class="text-muted d-block mt-1">现代声学教材</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/sound/声学理论与工程应用.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="声学理论与工程应用.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>声学理论与工程应用</span>
                             </a>
                             <small class="text-muted d-block mt-1">TBD</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/sound/[现代物理基础丛书]13 大气声学（杨训仁, 陈宇）.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="[现代物理基础丛书]13 大气声学（杨训仁, 陈宇）.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>大气声学</span>
                             </a>
                             <small class="text-muted d-block mt-1">杨训仁</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/sound/[现代物理基础丛书]1 现代声学理论基础[马大猷].pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="[现代物理基础丛书]1 现代声学理论基础[马大猷].pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>现代声学理论基础</span>
                             </a>
