--- a/statistical.html
+++ b/statistical.html
@@ -155,14 +155,14 @@
                     </div>
                     <div class="card-body">
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/statistical/李政道79年北京授课讲义 统计力学 .pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="李政道79年北京授课讲义 统计力学 .pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>统计力学</span>
                             </a>
                             <small class="text-muted d-block mt-1">1979年李政道北京授课统计力学</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/statistical/《量子统计力学  （第二版）》.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="《量子统计力学  （第二版）》.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>量子统计</span>
                             </a>
