--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@
                             </div>
                             <h4 class="card-title">物理公式计算器</h4>
                             <p class="card-text">支持复杂物理公式的符号计算与数值求解，包含常用物理常数库与单位转换功能</p>
-                            <a href="#" class="stretched-link"></a>
+                            <a href="formula.html" class="stretched-link"></a>
                         </div>
                     </div>
                 </div>
@@ -758,7 +758,7 @@
                             </div>
                             <h4 class="card-title">交互式实验模拟</h4>
                             <p class="card-text">3D可视化模拟各类物理实验现象，支持参数调节与实时数据采集分析</p>
-                            <a href="#" class="stretched-link"></a>
+                            <a href="experiment.html" class="stretched-link"></a>
                         </div>
                     </div>
                 </div>
@@ -807,7 +807,7 @@
                 <div class="col-lg-3 col-md-6 mb-4">
                     <h5>学科分类</h5>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><a href="#" class="text-white">经典力学</a></li>
+                        <li class="mb-2"><a href="mechanism.html" class="text-white">经典力学</a></li>
                         <li class="mb-2"><a href="electrodynamics.html" class="text-white">电动力学</a></li>
                         <li class="mb-2"><a href="quantum.html" class="text-white">量子力学</a></li>
                         <li class="mb-2"><a href="statistical.html" class="text-white">统计力学</a></li>
