--- a/experiment.html
+++ b/experiment.html
@@ -109,7 +109,7 @@
     <!-- 导航栏 -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
         <div class="container">
-            <a class="navbar-brand" href="index2.html">
+            <a class="navbar-brand" href="index.html">
                 <i class="fas fa-atom me-2"></i>PhysicsSolution Hub
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -121,7 +121,7 @@
                         <a class="nav-link" href="index2.html"><i class="fas fa-home me-1"></i> 首页</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#"><i class="fas fa-flask me-1"></i> 交互实验</a>
+                        <a class="nav-link active" href="experiment.html"><i class="fas fa-flask me-1"></i> 交互实验</a>
                     </li>
                 </ul>
             </div>
@@ -297,7 +297,7 @@
                 <div class="col-lg-3 col-md-6 mb-4">
                     <h5>快速链接</h5>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><a href="index2.html" class="text-white">返回首页</a></li>
+                        <li class="mb-2"><a href="index.html" class="text-white">返回首页</a></li>
                         <li class="mb-2"><a href="#" class="text-white">实验指南</a></li>
                         <li class="mb-2"><a href="#" class="text-white">问题反馈</a></li>
                     </ul>
