--- a/formula.html
+++ b/formula.html
@@ -141,7 +141,7 @@
     <!-- 导航栏 -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
         <div class="container">
-            <a class="navbar-brand" href="index2.html">
+            <a class="navbar-brand" href="index.html">
                 <i class="fas fa-atom me-2"></i>PhysicsSolution Hub
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -150,13 +150,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index2.html"><i class="fas fa-home me-1"></i> 首页</a>
+                        <a class="nav-link" href="index.html"><i class="fas fa-home me-1"></i> 首页</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="experiment.html"><i class="fas fa-flask me-1"></i> 交互实验</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="#"><i class="fas fa-calculator me-1"></i> 公式计算器</a>
+                        <a class="nav-link active" href="formula"><i class="fas fa-calculator me-1"></i> 公式计算器</a>
                     </li>
                 </ul>
             </div>
@@ -405,7 +405,7 @@
                 <div class="col-lg-3 col-md-6 mb-4">
                     <h5>快速链接</h5>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><a href="index2.html" class="text-white">返回首页</a></li>
+                        <li class="mb-2"><a href="index.html" class="text-white">返回首页</a></li>
                         <li class="mb-2"><a href="experiment.html" class="text-white">交互实验</a></li>
                         <li class="mb-2"><a href="#" class="text-white">使用指南</a></li>
                     </ul>
