--- a/quantum.html
+++ b/quantum.html
@@ -191,77 +191,77 @@
                     </div>
                     <div class="card-body">
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/quantum/量子力学 曾谨言 卷一.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="量子力学 曾谨言 卷一.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>《量子力学》 曾谨言 卷一</span>
                             </a>
                             <small class="text-muted d-block mt-1">经典量子力学教材</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/quantum/量子力学 曾谨言 卷二.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="量子力学 曾谨言 卷二.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>《量子力学》 曾谨言 卷二</span>
                             </a>
                             <small class="text-muted d-block mt-1">经典量子力学教材</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/quantum/伯克利物理学教程_第4卷_量子力学.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="伯克利物理学教程_第4卷_量子力学.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>伯克利物理学教程_第4卷_量子力学</span>
                             </a>
                             <small class="text-muted d-block mt-1">海外教材精选</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/quantum/10-量子力学习题.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="10-量子力学习题.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>量子力学习题</span>
                             </a>
                             <small class="text-muted d-block mt-1">理论推导与实例分析</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/quantum/量子力学I by [德] 顾樵(Qiao GU) (z-lib.org).pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="量子力学I by [德] 顾樵(Qiao GU) (z-lib.org).pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>量子力学I</span>
                             </a>
                             <small class="text-muted d-block mt-1">顾樵</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/quantum/量子力学II by [德] 顾樵(Qiao GU) (z-lib.org).pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="量子力学II by [德] 顾樵(Qiao GU) (z-lib.org).pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>量子力学II</span>
                             </a>
                             <small class="text-muted d-block mt-1">顾樵</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/quantum/量子力学-[美]E.Fermi.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="量子力学-[美]E.Fermi.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>量子力学</span>
                             </a>
                             <small class="text-muted d-block mt-1">费米经典教材</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/quantum/简明量子力学.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="简明量子力学.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>简明量子力学</span>
                             </a>
                             <small class="text-muted d-block mt-1">新手入门教程</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/quantum/量子力学-钱伯初-高等教育出版社-2005.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="量子力学-钱伯初-高等教育出版社-2005.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>量子力学</span>
                             </a>
                             <small class="text-muted d-block mt-1">钱伯初</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/quantum/量子力学概论.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="量子力学概论.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>量子力学概论</span>
                             </a>
                             <small class="text-muted d-block mt-1">格里菲斯翻译版</small>
                         </div>
                         <div class="resource-item">
-                            <a href="../物理系教材解答网站尝试/source/quantum/量子力学-苏汝铿-高等教育出版社-1997.pdf" target="_blank" class="d-flex align-items-center">
+                            <a href="量子力学-苏汝铿-高等教育出版社-1997.pdf" target="_blank" class="d-flex align-items-center">
                                 <i class="fas fa-file-pdf me-2 text-danger"></i>
                                 <span>量子力学</span>
                             </a>
